[package]
name = "pngme"
version = "0.1.0"
authors = ["Edward Gavin <edgavin1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
crc = "1.8.1"
clap = "2.33.1"
structopt = "0.3.15"
structopt-derive = "0.4.8"

